<resources>
    <string name="app_name">Project Kaiser</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="short_date_time">dd.MM.yyyy HH:mm</string>
    <string name="short_date">dd.MM.yyyy</string>
    <string name="short_time">HH:mm</string>
    <string name="hrs_pattern">%d h</string>
    <string name="mins_pattern">%d min</string>
    <string name="NOT_SWIPING_ITEM">NOT_SWIPING_ITEM</string>
    <string name="new_task_notif">Click to create new task</string>
    <string name="action_newtask">New Task</string>
    <string name="action_newlocaltask">New local task</string>
    <string name="action_sync">Sync</string>
    <string name="last_sync_time">Last sync time</string>
    <string name="action_about">About</string>
    <string name="action_send_log">Send error log</string>
    <string name="tab_inbox_not_configured">Inbox</string>
    <string name="tab_local">Local Tasks</string>
    <string name="no_local_issues">No local issues. Create new tasks with \"+\" button below</string>
    <string name="no_remote_issues">You have no issues assigned</string>
    <string name="connection_not_configured">Not configured!</string>
    <string name="connection_not_configured_hint">Click "Configure" to setup synchronization with Project Kaiser server</string>
    <string name="btn_configure">Configure</string>
    <string name="filter_active">Active</string>
    <string name="filter_closed">Closed</string>
    <string name="filter_overdue">Overdue</string>
    <string name="action_errorlog_sent">Sending error log...</string>
    <string name="action_errorlog_body">In attachment</string>
    <string name="action_errorlog_caption">PK android error log</string>
    <string name="action_errorlog_error">Error sending mail</string>
    <string name="action_no_email_client">There are no email clients installed</string>
    <string name="group_srv">Servers</string>
    <string name="group_mngr">Management</string>
    <string name="tab_details">Details</string>
    <string name="tab_comments">Comments</string>
    <string name="completed">Completed</string>
    <string name="resumed">Resumed</string>
    <string name="resume">Resume</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="jresumed">Task resumed</string>
    <string name="jcompleted">Task completed</string>
    <string name="priority_blocker">Blocker</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_low">Low</string>
    <string name="assignee_not_specified">Assignee not specified</string>
    <string name="responsible_not_specified">Responsible not specified</string>
    <string name="due_date_short_label">Date:</string>
    <string name="due_time_short_label">Time:</string>
    <string name="issue_priority">%s Priority</string>
    <string name="issue_due_date">Date %s</string>
    <string name="issue_due_time">Time %s</string>
    <string name="issue_due_date_label">Due date</string>
    <string name="issue_due_time_label">Due time</string>
    <string name="issue_click_to_assign_due_date">Assign Due Date</string>
    <string name="issue_click_to_assign_due_time">Assign Due time</string>
    <string name="issue_clear_due_date">Clear</string>
    <string name="issue_budget">Budget: %s</string>
    <string name="issue_budget_label">Budget</string>
    <string name="issue_hours">Hours</string>
    <string name="issue_mins">Mins</string>
    <string name="issue_assignee">Assignee: %s</string>
    <string name="issue_assignee_label">Assignee</string>
    <string name="issue_responsible">Responsible: %s</string>
    <string name="issue_responsible_label">Responsible</string>
    <string name="issue_description_label">Description</string>
    <string name="issue_load_image">Load me</string>
    <string name="more_settings_label">More settings</string>
    <string name="cancel_creating_task_confirm">Cancel creating this task?</string>
    <string name="cancel_editing_task_confirm">Cancel editing?</string>
    <string name="resume_task_confirm">Resume this task?</string>
    <string name="close_task_confirm">Complete this task?</string>
    <string name="delete_task_confirm">Delete this task?</string>
    <string name="sync_error">Last sync error: %s</string>
    <string name="your_comment">Add comment</string>
    <string name="add_comment">OK</string>
    <string name="all_projects">All Projects</string>
    <string name="set_local">Local Task</string>
    <string name="select_folder_dlg_header">Select Folder</string>
    <string name="no_folder">No folder</string>
    <string name="select_user_dlg_header">Select User</string>
    <string name="search_users">Search</string>
    <string name="select_me">Select Me</string>
    <string name="select_nobody">Nobody</string>
    <string name="notification_new_tasks">and other tasks</string>
    <string name="short_year">y</string>
    <string name="short_month">m</string>
    <string name="short_week">w</string>
    <string name="short_day">d</string>
    <string name="short_hour">h</string>
    <string name="short_min">min</string>
    <string name="login_with_google">Sign in using my Google account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server">Server URL</string>
    <string name="server_cloud">PK Cloud</string>
    <string name="server_custom">Custom Server</string>
    <string name="server_cloud_url">http://www.projectkaiser.com/online</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="google_authentication_progress">Authentication in Google&#8230;</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_email_or_password">Incorrect e-mail or password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_account">Add Account</string>
    <string name="delete_account_confirm">Delete account?</string>
    <string name="pref_header_general">General</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_accounts_summary">Add or remove PK accounts</string>
    <string name="pref_title_sync_frequency">Sync interval</string>
    <string name="pref_show_new_task">New task notification</string>
    <string name="pref_time_notif">Daily review time</string>
    <string name="pref_new_task_notif">Task from block screen </string>
    <string name="pref_show_due_task">Overdue task notification</string>
    <string name="pref_due_task_notif">Show notificaction on block screen</string>
    <string-array name="server_items">
        <item>Local tasks</item>
        <item>Settings</item>
        <item>About Project Kaiser</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_time_notif_titles">
		<item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_time_notif_values">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>-1</item>
    </string-array>
    <string name="version">Version: %s</string>
    <string name="website">Web: http://projectkaiser.com</string>
    <string name="last_sync">Synced: %s</string>
    <string name="no_last_sync">Not synced yet</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="network_error">Network error</string>
    <string name="project_not_found">Project not found!</string>
    <string name="folder_not_found">Folder not found!</string>
    <string name="user_not_found">User not found!</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_email">EMailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
   	<string name="validation_app_fnout">Warning: Application is outdated. Function(s)</string>
    <string name="validation_app_end">do not support by Application anymore</string>
   	<string name="validation_srv_fnout">Warning: Server is outdated. Function(s)</string>
   	<string name="validation_srv_end">do not support by Server anymore</string>
   	<string name="validation_srv_bad">Warning: Server and application incompatible</string>
   	<string name="sync_srv_error_0">Error: Application is outdated. Client function not supported anymore</string>
    <string name="sync_srv_error_1">Error: Server is outdated. Client function not supported yet</string>
    <string name="sync_srv_error_2">Error: Unknown client function</string>
    <string name="sync_srv_error_3">Error: Unknown communication error</string>
	<string name="func_create_task">Create task</string>
	<string name="func_sync">Synchronization</string>
	<string name="func_login">Create account</string>
</resources>