<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectkaiser.app_android.EditIssueActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Folder name"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lblPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/issue_priority"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/issue_due_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/issue_budget"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblAssignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/issue_assignee"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblResponsible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/issue_responsible"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/pnlDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?attr/dividerVertical" />

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/issue_description_label"
                android:textAppearance="@style/DescriptionLabel"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>